# test-git-hash

./: Main.hs  default-with-git.nix  default.nix  derivation-with-git.nix  package-set-with-fake-git.nix  package-set-with-git.nix  package-set.nix  shell.nix  test-git-hash.cabal
