cabal-version:      2.2
name:               test-git-hash
version:            0.1.0.0
build-type:         Simple

executable test-git-hash
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , gitrev
  ghc-options:      -threaded
                    -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wpartial-fields
                    -Wredundant-constraints
  default-language: Haskell2010
